--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "^15.2.5",
@@ -13,10 +13,25 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.1"
-  }
+  },
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeancfss/valeycoin-site.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jeancfss/valeycoin-site/issues"
+  },
+  "homepage": "https://github.com/jeancfss/valeycoin-site#readme",
+  "description": ""
 }
